--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -6,8 +6,15 @@
 \newcommand{\comr}[1]{\ensuremath{\mathrel{[#1, #1]}}}  % [r, r] (relation spacing)
 \newcommand{\com}[1]{\ensuremath{[#1, #1]}}             % [r, r] (no extra space)
 
-\newcommand{\Comr}[1]{\ensuremath{\mathrel{\lb #1 \rb}}} % [[r]] (relation spacing)
-\newcommand{\Com}[1]{\ensuremath{\lb #1 \rb}}            % [[r]] (no extra space)
+% \newcommand{\Comr}[1]{\ensuremath{\mathrel{\lb #1 \rb}}} % [[r]] (relation spacing)
+% \newcommand{\Com}[1]{\ensuremath{\lb #1 \rb}}            % [[r]] (no extra space)
+\newcommand{\Comr}[1]{\ensuremath{\mathrel{[#1]}}} % [[r]] (relation spacing)
+\newcommand{\Com}[1]{\ensuremath{[#1]}}            % [[r]] (no extra space)
+\newcommand\mytimes{\ensuremath{\ast}}
+\newcommand{\Phiba}{\ensuremath{\Phi_{\beta, \alpha}}}
+\newcommand{\Psiba}{\ensuremath{\Psi_{\beta, \alpha}}}
+\newcommand{\Deltaba}{\ensuremath{\Delta_{\beta, \alpha}}}
+\newcommand{\Deltabar}{\ensuremath{\mathrel{\Delta_{\beta, \alpha}}}}
 
 
 %% \newcommand{\commone}{\ensuremath{\com\Cg^{\bF}(x,y)}}
